# cpp-tricks

./: .clang-format  .gitignore  CMakeLists.txt  README.md  crtp.cpp
src/cache_invalidation/: CMakeLists.txt  cache_invalidation.hpp  cache_invalidation_example.cpp
src/crtp/: CMakeLists.txt
src/simple_threadpool/: CMakeLists.txt  thread_pool.hpp  thread_pool_example.cpp
